--- a/问卷调查/Template/量表---儿童基本情况.html
+++ b/问卷调查/Template/量表---儿童基本情况.html
@@ -69,13 +69,55 @@
         <div>③是否母乳喂养？</div>
         <div isunique="true"><input type="checkbox" id="A4_5">以母乳为主<input type="checkbox" id="A4_6">以奶粉为主</div>
     </div>
-    <!--
-    <div style="position: relative"><p></p><p></p><p>5.既往病史及治疗史：</p><div>①中耳炎：<input type="checkbox" id="A7_1" parent="7" desc="基本健康情况" group="A">无<input type="checkbox" id="A7_2">有，治疗方法<input id="A7_3" type="text" style="width:80px"></div><div>②化脓性扁桃体炎：<input type="checkbox" id="A7_10">无<input type="checkbox" id="A7_11">有，治疗方法<input id="A7_12" type="text" style="width:80px"></div><div>鼻窦炎：<input type="checkbox" id="A7_13">无<input type="checkbox" id="A7_14">有，治疗方法<input id="A7_15" type="text" style="width:80px"></div><div>③鼻窦炎：<input type="checkbox" id="A7_4">无<input type="checkbox" id="A7_5">有，治疗方法<input id="A7_6" type="text" style="width:80px"></div><div>哮喘：<input type="checkbox" id="A7_7">无<input type="checkbox" id="A7_8">有，治疗方法<input id="A7_9" type="text" style="width:80px"></div><div>④过敏性鼻炎：<input type="checkbox" id="A7_16">无<input type="checkbox" id="A7_17">有，治疗方法<input id="A7_18" type="text" style="width:80px"></div><div>⑤哮喘 ：<input type="checkbox" id="A7_19">无<input type="checkbox" id="A7_20">有，治疗方法<input id="A7_22" type="text" style="width:80px"></div><div>⑥急性喉炎：<input type="checkbox" id="A7_23">无<input type="checkbox" id="A7_24">有，治疗方法<input id="A7_26" type="text" style="width:80px"></div><div>⑦血糖异常：<input type="checkbox" id="A7_27">无<input type="checkbox" id="A7_28">有，治疗方法<input id="A7_30" type="text" style="width:80px"></div><div>⑧血脂异常：<input type="checkbox" id="A7_31">无<input type="checkbox" id="A7_32">有，治疗方法<input id="A7_34" type="text" style="width:80px"></div><div>⑨血压异常：<input type="checkbox" id="A7_35">无<input type="checkbox" id="A7_36">有，治疗方法<input id="A7_38" type="text" style="width:80px"></div><div>⑩心血管疾病：<input type="checkbox" id="A7_39">无<input type="checkbox" id="A7_40">有，疾病名：<input id="A7_41" type="text" style="width:80px">,治疗方法<input id="A7_42" type="text" style="width:80px"></div><div>⑪肾脏疾病：<input type="checkbox" id="A7_43">无<input type="checkbox" id="A7_44">有，疾病名：<input id="A7_45" type="text" style="width:80px">,治疗方法<input id="A7_46" type="text" style="width:80px"></div><div>⑫肝脏疾病：<input type="checkbox" id="A7_47">无<input type="checkbox" id="A7_48">有，疾病名：<input id="A7_49" type="text" style="width:80px">,治疗方法<input id="A7_50" type="text" style="width:80px"></div><div>⑬神经系统疾病：<input type="checkbox" id="A7_51">无<input type="checkbox" id="A7_52">有，疾病名：<input id="A7_53" type="text" style="width:80px">,治疗方法<input id="A7_54" type="text" style="width:80px"></div><div>⑭除血糖异常外的内分泌系统疾病：<input type="checkbox" id="A7_55">无<input type="checkbox" id="A7_56">有，疾病名：<input id="A7_57" type="text" style="width:80px">,治疗方法<input id="A7_58" type="text" style="width:80px"></div><div>⑮除哮喘外的其他呼吸系统疾病：<input type="checkbox" id="A7_59">无<input type="checkbox" id="A7_60">有，疾病名：<input id="A7_61" type="text" style="width:80px">,治疗方法<input id="A7_62" type="text" style="width:80px"></div><div>⑯其他特殊病史：<input type="checkbox" id="A7_63">无<input type="checkbox" id="A7_64">有，疾病名：<input id="A7_65" type="text" style="width:80px">,治疗方法<input id="A7_66" type="text" style="width:80px"></div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p></p><div>6.父亲年龄：<input id="A8_1" type="text" style="width:80px" parent="8" desc="基本健康情况" group="A"></div><div>&nbsp;&nbsp;&nbsp;父亲学历：<input id="A8_2" type="text" style="width:80px"></div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p></p><div>7.母亲年龄：<input id="A9_1" type="text" style="width:80px" parent="9" desc="基本健康情况" group="A"></div><div>&nbsp;&nbsp;&nbsp;母亲学历：<input id="A9_2" type="text" style="width:80px"></div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p>8.与儿童同住的家中是否有经常吸烟者？</p><div><input type="checkbox" id="A10_1" parent="10" desc="基本健康情况" group="A">是<input type="checkbox" id="A10_2">否</div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p>9.与儿童同住的家中是否有打鼾者？</p><div><input type="checkbox" id="A11_1" parent="11" desc="基本健康情况" group="A">是<input type="checkbox" id="A11_2">否</div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p>10.您孩子是否与父母同住？</p><div><input type="checkbox" id="A12_1" parent="12" desc="基本健康情况" group="A">是<input type="checkbox" id="A12_2">否</div></div></div><div>
-    <div style="position: relative"><p></p><p></p><p>11.您孩子是否有兄弟姐妹？</p><div><input type="checkbox" id="A13_1" parent="13" desc="基本健康情况" group="A">是<input id="A13_2" type="text" style="width:80px">人<input type="checkbox" id="A13_3">否</div></div>-->
+    <div style="position: relative">
+        <p></p>
+        <p>5.既往病史及治疗史：</p>
+        <div isunique="true">①中耳炎：<input type="checkbox" id="A7_1" parent="7" desc="基本健康情况" group="A">无<input type="checkbox" id="A7_2">有，治疗方法<input id="A7_3" type="text" style="width:80px"></div>
+        <div isunique="true">②化脓性扁桃体炎：<input type="checkbox" id="A7_10">无<input type="checkbox" id="A7_11">有，治疗方法<input id="A7_12" type="text" style="width:80px"></div>
+        <div isunique="true">鼻窦炎：<input type="checkbox" id="A7_13">无<input type="checkbox" id="A7_14">有，治疗方法<input id="A7_15" type="text" style="width:80px"></div>
+        <div isunique="true">③鼻窦炎：<input type="checkbox" id="A7_4">无<input type="checkbox" id="A7_5">有，治疗方法<input id="A7_6" type="text" style="width:80px"></div>
+        <div isunique="true">哮喘：<input type="checkbox" id="A7_7">无<input type="checkbox" id="A7_8">有，治疗方法<input id="A7_9" type="text" style="width:80px"></div>
+        <div isunique="true">④过敏性鼻炎：<input type="checkbox" id="A7_16">无<input type="checkbox" id="A7_17">有，治疗方法<input id="A7_18" type="text" style="width:80px"></div>
+        <div isunique="true">⑤哮喘 ：<input type="checkbox" id="A7_19">无<input type="checkbox" id="A7_20">有，治疗方法<input id="A7_22" type="text" style="width:80px"></div>
+        <div isunique="true">⑥急性喉炎：<input type="checkbox" id="A7_23">无<input type="checkbox" id="A7_24">有，治疗方法<input id="A7_26" type="text" style="width:80px"></div>
+        <div isunique="true">⑦血糖异常：<input type="checkbox" id="A7_27">无<input type="checkbox" id="A7_28">有，治疗方法<input id="A7_30" type="text" style="width:80px"></div>
+        <div isunique="true">⑧血脂异常：<input type="checkbox" id="A7_31">无<input type="checkbox" id="A7_32">有，治疗方法<input id="A7_34" type="text" style="width:80px"></div>
+        <div isunique="true">⑨血压异常：<input type="checkbox" id="A7_35">无<input type="checkbox" id="A7_36">有，治疗方法<input id="A7_38" type="text" style="width:80px"></div>
+        <div isunique="true">⑩心血管疾病：<input type="checkbox" id="A7_39">无<input type="checkbox" id="A7_40">有，疾病名：<input id="A7_41" type="text" style="width:80px">,治疗方法<input id="A7_42" type="text" style="width:80px"></div>
+        <div isunique="true">⑪肾脏疾病：<input type="checkbox" id="A7_43">无<input type="checkbox" id="A7_44">有，疾病名：<input id="A7_45" type="text" style="width:80px">,治疗方法<input id="A7_46" type="text" style="width:80px"></div>
+        <div isunique="true">⑫肝脏疾病：<input type="checkbox" id="A7_47">无<input type="checkbox" id="A7_48">有，疾病名：<input id="A7_49" type="text" style="width:80px">,治疗方法<input id="A7_50" type="text" style="width:80px"></div>
+        <div isunique="true">⑬神经系统疾病：<input type="checkbox" id="A7_51">无<input type="checkbox" id="A7_52">有，疾病名：<input id="A7_53" type="text" style="width:80px">,治疗方法<input id="A7_54" type="text" style="width:80px"></div>
+        <div isunique="true">⑭除血糖异常外的内分泌系统疾病：<input type="checkbox" id="A7_55">无<input type="checkbox" id="A7_56">有，疾病名：<input id="A7_57" type="text" style="width:80px">,治疗方法<input id="A7_58" type="text" style="width:80px"></div>
+        <div isunique="true">⑮除哮喘外的其他呼吸系统疾病：<input type="checkbox" id="A7_59">无<input type="checkbox" id="A7_60">有，疾病名：<input id="A7_61" type="text" style="width:80px">,治疗方法<input id="A7_62" type="text" style="width:80px"></div>
+        <div isunique="true">⑯其他特殊病史：<input type="checkbox" id="A7_63">无<input type="checkbox" id="A7_64">有，疾病名：<input id="A7_65" type="text" style="width:80px">,治疗方法<input id="A7_66" type="text" style="width:80px"></div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <div>6.父亲年龄：<input id="A8_1" type="text" style="width:80px" parent="8" desc="基本健康情况" group="A">&nbsp;&nbsp;&nbsp;父亲学历：<input id="A8_2" type="text" style="width:80px"></div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <div>7.母亲年龄：<input id="A9_1" type="text" style="width:80px" parent="9" desc="基本健康情况" group="A">&nbsp;&nbsp;&nbsp;母亲学历：<input id="A9_2" type="text" style="width:80px"></div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <p>8.与儿童同住的家中是否有经常吸烟者？</p>
+        <div isunique="true"><input type="checkbox" id="A10_1" parent="10" desc="基本健康情况" group="A">是<input type="checkbox" id="A10_2">否</div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <p>9.与儿童同住的家中是否有打鼾者？</p>
+        <div isunique="true"><input type="checkbox" id="A11_1" parent="11" desc="基本健康情况" group="A">是<input type="checkbox" id="A11_2">否</div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <p>10.您孩子是否与父母同住？</p>
+        <div isunique="true"><input type="checkbox" id="A12_1" parent="12" desc="基本健康情况" group="A">是<input type="checkbox" id="A12_2">否</div>
+    </div>
+    <div style="position: relative">
+        <p></p>
+        <p>11.您孩子是否有兄弟姐妹？</p>
+        <div isunique="true"><input type="checkbox" id="A13_1" parent="13" desc="基本健康情况" group="A">是<input id="A13_2" type="text" style="width:80px">人<input type="checkbox" id="A13_3">否</div>
+    </div>
     <p></p>
 </div>
