--- a/问卷调查/Views/Home/PatientInfo.cshtml
+++ b/问卷调查/Views/Home/PatientInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Patient
 
-
+<input type="hidden" value="@Model.Type" id="hd_pattype"/>
 <div class="row">
     <div class="col-sm-4">住院号：<span name="visitId">@Model.VisitID</span></div>
     <div class="col-sm-3">姓名：<span name="name">@Model.Name</span></div>
