--- a/问卷调查/Template/量表---儿童基本情况.html
+++ b/问卷调查/Template/量表---儿童基本情况.html
@@ -11,7 +11,7 @@
 <p>&emsp;&emsp;睡眠障碍严重影响儿童健康，特别是睡眠时打鼾、憋气等所导致的睡眠效率下降及睡眠缺氧，不仅可导致儿童的生长发育迟缓，而且能够影响儿童神经认知功能的发育，从而对儿童的学习成绩等产生长期影响。</p>
 <p>&emsp;&emsp;为了早期发现儿童睡眠问题的影响，为政府部门相关卫生决策提供依据，由<strong><i>上海市教育委员会创新计划项目支持</i></strong>，上海交通大学附属第六人民医院耳鼻咽喉头颈外科（国家临床重点专科）、上海市睡眠呼吸障碍重点实验室及上海市第八人民医院体检中心共同承担，将在上海市徐汇区幼儿园及小学儿童中开展“儿童睡眠及学习行为能力的调查”</p>
 <p>&emsp;&emsp;本次调查共分为3步：①进行睡眠健康及学习、行为问题方面的问卷调查，留取无创口腔拭子样本。②根据问卷结果，选取一部分学生进行家用腕表式睡眠筛查。③对于家用腕表式睡眠筛查仍提示可能存在睡眠相关问题的同学，上海交通大学附属第六人民医院睡眠中心将提供<strong><i>免费金标准睡眠检测</i></strong>（医院内多导睡眠检测，限200名免费）。所有项目均无损伤，所有同学的信息也将严格保密。希望得到同学和家长的支持与配合，谢谢！</p>
-<p>（联系方式：您如果有关本项调查的任何问题，请通过电话18930170062与调查人员联系，我们将解答您的疑问。）</p><div style="color:red"><input type="checkbox">已阅读知情同意书，同意开始进行第一步问卷调查</div>
+<p>（联系方式：您如果有关本项调查的任何问题，请通过电话18930170062与调查人员联系，我们将解答您的疑问。）</p><div style="color:red"><input type="checkbox" id="ck_agreeon">已阅读知情同意书，同意开始进行第一步问卷调查</div>
 <div id="div_childinfo">
     <div style="position: relative">
         <p></p><h3>基本健康情况（请在横线上答题，或在□内勾选表示选择此项，请勿漏项）</h3><p></p>
@@ -22,7 +22,7 @@
             <div><input type="checkbox" id="A1_4">曾经有，发生年龄：<input id="A1_5" type="text" style="width:50px">岁至<input id="A1_6" type="text" style="width:50px">岁</div>
         </div>
         <p>-如有打鼾，您的孩子打鼾中途是否有憋气现象？</p>
-        <div isunique="true">
+        <div isunique="true" pElement="#A1_2,#A1_4">
             <div><input type="checkbox" id="A1_7">否</div>
             <div><input type="checkbox" id="A1_8">是，发现憋气有<input id="A1_9" type="text" style="width:50px">年</div>
         </div>
@@ -43,16 +43,14 @@
         <p>3.您的孩子既往是否治疗过打鼾或是扁桃体/腺样体肥大？</p>
         <div isunique="true"><input type="checkbox" id="A3_1" parent="3" desc="基本健康情况" group="A">是<input type="checkbox" id="A3_2">否</div>
         <div>-如是，治疗方法为：</div>
-        <div isunique="true">
+        <div isunique="true" pElement="#A3_1">
             <div><input type="checkbox" id="A3_3">药物，药物名：<input id="A3_4" type="text" style="width:100px">何时开始？<input id="A3_5" type="text" style="width:100px">治疗持续多久？<input id="A3_6" type="text" style="width:100px"></div>
             <div><input type="checkbox" id="A3_7">矫正口腔畸形，何时开始？<input id="A3_8" type="text" style="width:100px">治疗持续多久？<input id="A3_9" type="text" style="width:100px"></div>
             <div><input type="checkbox" id="A3_10">佩戴呼吸机，何时开始？<input id="A3_11" type="text" style="width:100px">治疗持续多久？<input id="A3_12" type="text" style="width:100px"></div>
-            <div><input type="checkbox" id="A3_13">手术，请勾选：</div>
-
-            <div>-手术时年龄：<input id="A3_17" type="text" style="width:50px;">岁？</div>
+            <div><input type="checkbox" id="A3_13">手术，请勾选：-手术时年龄：<input id="A3_17" type="text" style="width:50px;">岁？</div>
             <div style="position:absolute;bottom:0"><input type="checkbox" id="A3_18">其他治疗方式：<input id="A3_19" type="text" style="width:150px;">治疗时间：<input id="A3_20" type="text" style="width:50px;"></div>
         </div>
-        <div isunique="true">
+        <div isunique="true" pElement="#A3_13">
             <div><input type="checkbox" id="A3_14">扁桃体切除术</div>
             <div><input type="checkbox" id="A3_15">腺样体切除术</div>
             <div><input type="checkbox" id="A3_16">扁桃体+腺样体切除术</div>
@@ -99,7 +97,7 @@
         <p></p>
         <div>7.母亲年龄：<input id="A9_1" type="text" style="width:80px" parent="9" desc="基本健康情况" group="A">&nbsp;&nbsp;&nbsp;母亲学历：<input id="A9_2" type="text" style="width:80px"></div>
     </div>
-    <div style="position: relative">
+    <div style="position: relative" isunique="true">
         <p></p>
         <p>8.与儿童同住的家中是否有经常吸烟者？</p>
         <div isunique="true"><input type="checkbox" id="A10_1" parent="10" desc="基本健康情况" group="A">是<input type="checkbox" id="A10_2">否</div>
