--- a/问卷调查/Template/量表---基本信息.html
+++ b/问卷调查/Template/量表---基本信息.html
@@ -48,10 +48,20 @@
     var name = $('#patinfo span[name="name"]').html();
     var age = $('#patinfo span[name="age"]').html();
     var sex = $('#patinfo span[name="sex"]').html();
+    var nation = $('#patinfo input[name="nation"]').val();
+    var marriage = $('#patinfo input[name="marriage"]').val();
+    var weight = $('#patinfo input[name="weight"]').val();
+    var height = $('#patinfo input[name="height"]').val();
+    var tele = $('#patinfo input[name="tele"]').val();
     $('#text_1_1').val(visitId);
     $('#text_2_1').val(name);
     $('#text_3_1').val(sex);
     $('#text_4_1').val(age);
+    $('#text_5_1').val(nation);
+    $('#text_8_1').val(tele);
+    $('#text_6_1').val(marriage);
+    $('#text_11_1').val(weight);
+    $('#text_10_1').val(height);
 </script>
 <p>
     <div class="row">
