--- a/问卷调查/Views/Shared/_Layout.cshtml
+++ b/问卷调查/Views/Shared/_Layout.cshtml
@@ -58,6 +58,7 @@
             </div>
             <div>
                 <button style="margin-top:8px" class="btn btn-default pull-right" type="button" onclick="AddPatient" data-toggle="modal" data-target="#patientInfoModal"><span class="glyphicon glyphicon-user"></span><span style="margin-left:10px">添加患者</span></button>
+                @*<button style="margin-top:8px;margin-right:10px" class="btn btn-default pull-right" type="button" onclick="SyncPatient();"><span class="glyphicon glyphicon-refresh"></span><span style="margin-left:10px">同步患者</span></button>*@
             </div>
         </div>
     </nav>
