--- a/问卷调查/Views/Shared/_MobileLayout.cshtml
+++ b/问卷调查/Views/Shared/_MobileLayout.cshtml
@@ -51,6 +51,19 @@
         .margin-top-50 {
             margin-top: 50px
         }
+
+        .boldquestion {
+            font-weight: bold;
+        }
+        .normalquestion {
+            font-weight: normal;
+        }
+        .paddingleft30{
+            padding-left:30px;
+        }
+        .paddingleft40{
+            padding-left:40px;
+        }
     </style>
 </head>
 <body>
